--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -4,7 +4,7 @@
   color: $white;
   .navbar__container {
     display: flex;
-    max-width: 1200px;
+    max-width: 1024px;
     align-items: center;
     justify-content: space-between;
     margin-left: auto;
@@ -12,11 +12,11 @@
   }
 
   .navbar__btns {
-    display: flex;
-    flex-flow: row nowrap;
-    padding: 12px 8px;
-    .navbar__btns > * {
-      padding: 10px 8px;
+    padding: 1.5em 1em;
+    & > * {
+      font-size: 20px;
+      padding: 0 1em;
+      color: #9c903f;
     }
   }
 }
