--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,3 +2,4 @@
 @import './global.scss';
 @import '../components/Home/home.scss';
 @import '../components/Navbar/navbar.scss';
+@import '../components/Feed/feed.scss';
