--- a/src/frontend/styles/index.scss
+++ b/src/frontend/styles/index.scss
@@ -3,3 +3,4 @@
 @import '../components/Home/home.scss';
 @import '../components/Navbar/navbar.scss';
 @import '../components/Feed/feed.scss';
+@import '../components/CreateRecipe/createRecipe.scss';
